# rust_test_server

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  temp.md
migrations/: 20251001113424_create_todos.sql  20251003_create_todos_postgres.sql
src/: db.rs  main.rs  models.rs
src/handlers/: mod.rs  todo.rs
