[package]
name = "rust_test_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tracing-subscriber = "0.3.20"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }

