[package]
name = "rust_test_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "tls-rustls", "postgres", "migrate"] }
